修复了composer内命名空间问题,新增管道通讯功能，以及demo。全剧函数单独文件放置

--- a/composer.json
+++ b/composer.json
@@ -19,12 +19,16 @@
     },
     "autoload": {
         "psr-4": {
-            "YieldThread\\": "src/"
-        }
+            "LikeThread\\": "src/"
+        },
+        "files": ["src/functions.php"]
     },
     "autoload-dev": {
         "psr-4": {
-            "YieldThread\\": "tests"
+            "LikeThread\\": "tests"
         }
-    }
+    },
+    "bin": [
+        "yieldboot"
+    ]
 }
